--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html lang="uz">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mamarajab — Rasmiy Web Saytim</title>
+    <meta name="description" content="Bu Mamarajabning rasmiy web sayti.">
+    <meta name="keywords" content="Mamarajab, web sayt, rasmiy sayt">
+</head>
+<body>
+    <h1>Salom! Men Mamarajabman!</h1>
+    <p>Bu mening rasmiy web saytim.</p>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="uz">
 
 <head>
     <meta charset="utf-8" />
@@ -170,3 +185,4 @@
 
 </body>
 </html>
+
