--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <html lang="uz">
 
 <head>
+    <meta name="google-site-verification" content="PuIlt6tGMidOYYBHdiLzX059ZBm9M67M-j0TbtM8CuQ" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Hacker Uslubidagi Shaxsiy Sayt — Mamarajab Musulmonov</title>
@@ -185,4 +186,5 @@
 
 </body>
 </html>
+
 
