--- a/index.html
+++ b/index.html
@@ -1,20 +1,5 @@
 <!DOCTYPE html>
 <html lang="uz">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mamarajab — Rasmiy Web Saytim</title>
-    <meta name="description" content="Bu Mamarajabning rasmiy web sayti.">
-    <meta name="keywords" content="Mamarajab, web sayt, rasmiy sayt">
-</head>
-<body>
-    <h1>Salom! Men Mamarajabman!</h1>
-    <p>Bu mening rasmiy web saytim.</p>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="uz">
 
 <head>
     <meta name="google-site-verification" content="PuIlt6tGMidOYYBHdiLzX059ZBm9M67M-j0TbtM8CuQ" />
@@ -28,7 +13,7 @@
 </head>
 
 <body>
-
+<meta name="google-site-verification" content="PuIlt6tGMidOYYBHdiLzX059ZBm9M67M-j0TbtM8CuQ" />
     <!-- Matrix canvas (fon) -->
     <canvas id="matrix" aria-hidden="true"></canvas>
     <div class="overlay" aria-hidden="true"></div>
@@ -186,5 +171,6 @@
 
 </body>
 </html>
+
 
 
