--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                     </div>
                 </div>
 
-                <div class="about-image">
-                    <div class="neon-frame">
-                        <img src="ra.jpg" alt="Sizning rasm">
-                    </div>
+                 <div class="about-image">
+                        <div class="neon-frame">
+                                <img src="Mamarajab.jpg" alt="Mamarajab Musulmonov">
+                        </div>
                 </div>
             </div>
         </div>
@@ -171,6 +171,7 @@
 
 </body>
 </html>
+
 
 
 
