--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                  <div class="about-image">
                         <div class="neon-frame">
-                                <img src="Mamarajab.jpg" alt="Mamarajab Musulmonov">
+                                <img src="https://manarajab.github.io/Mamarajab.jpg" alt="Mamarajab Musulmonov">
                         </div>
                 </div>
             </div>
@@ -171,6 +171,7 @@
 
 </body>
 </html>
+
 
 
 
