--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                  <div class="about-image">
                         <div class="neon-frame">
                          <img src="https://mamarajab.github.io/Mamarajab.png" alt="Mamarajab Musulmonov">
+                            <img src="data:image/png;base64,PASTE_BASE64_CODE_HERE" alt="Mamarajab Musulmonov">
+                            <img src="Mamarajab.png" alt="Mamarajab Musulmonov">
                         </div>
                 </div>
             </div>
@@ -171,6 +173,7 @@
 
 </body>
 </html>
+
 
 
 
